Attempting to fix issues with formatting on mobile (also removing iframe of this site on personal page)

--- a/style.css
+++ b/style.css
@@ -101,15 +101,15 @@
 
 .bottombar_text{
     margin: 0;
-    font-size: clamp(1rem,2vw,2rem);
+    font-size: clamp(0.85rem,2vw,2rem);
     color: var(--bottombar-text-color);
 }
 
 .bottombar_email_link{
     text-align: center;
-    margin-top: 0.75vw;
+    margin-top: 0.6vw;
     margin-bottom: 0%;
-    font-size: clamp(1rem,1.7vw,2rem);
+    font-size: clamp(0.75rem,1.7vw,2rem);
     color: var(--bottombar-email-link-color);
 }
 
@@ -202,7 +202,7 @@ audio{
 
 h1{
     text-align: center;
-    font-size: clamp(1.5rem,2.1vw,2rem);
+    font-size: clamp(1.25rem,2.1vw,2rem);
     text-decoration: none;
     color: var(--navbar-name-color);
 }
